<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollStatus"
    tools:context="com.example.ciller.pm.FinancialStatus">

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/iv_status"
        android:layout_height="150dp"
        android:layout_width="wrap_content"
        android:src="@drawable/status"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        />


    <TextView
        android:id="@+id/textViewStatus1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginLeft="20dp"
        android:text="@string/messageStatus1"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/textViewStatus2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/messageStatus2"
        android:textSize="15dp"
        />

    <TextView
        android:id="@+id/textViewStatus3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/messageStatus3"
        android:textSize="15dp"
        />


    <TextView
        android:id="@+id/textViewStatus5"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/messageStatus4"
        android:textSize="15dp"
        />

    <TextView
        android:id="@+id/textViewStatus6"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/messageStatus5"
        android:textSize="15dp"
        />


    <TextView
        android:id="@+id/textViewStatus7"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/messageStatus6"
        android:textSize="20dp"
        />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewStatus"
        android:layout_row="8"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_marginLeft="20dp"
        >

    </ListView>

    <TextView
        android:id="@+id/textViewStatus8"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="9"
        android:layout_column="0"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/messageStatus7"
        android:textSize="20dp"
        />




</GridLayout>

</ScrollView>
